[project]
name = "init-deploy-outbond"
version = "0.1.0"
description = "Task-oriented VPS proxy stack deployment tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
